# MicroPython_HDC1080

./: README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: hdc1080_humidity_resolution.py  hdc1080_operation_mode.py  hdc1080_simpletest.py  hdc1080_temperature_resolution.py
micropython_hdc1080/: hdc1080.py
