# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "micropython-hdc1080"
description = "MicroPython driver for the TI HDC1080 Temperature and Humidity sensor"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [{ name = "JDM", email = "xxyx@mailmeto.mozmail.com" }]
urls = { Homepage = "https://github.com/jposada202020/MicroPython_HDC1080" }
keywords = [
    "sensor",
    "hdc1080",
    "micropython",
    "driver",
    "hdc1080",
    "temperature",
    "humidity",
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: MicroPython",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["micropython_hdc1080"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
